deployments/workloads/mkdocs/mkdocs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkdocs-deployment
  labels:
    app: mkdocs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mkdocs
  template:
    metadata:
      labels:
        app: mkdocs
    spec:
      containers:
        - name: mkdocs
          image: squidfunk/mkdocs-material
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: mkdocs-config
              mountPath: /docs/mkdocs.yml
              subPath: mkdocs.yml
              readOnly: true
            - name: nfs-docs
              mountPath: /docs/docs
      volumes:
        - name: mkdocs-config
          configMap:
            name: mkdocs-configmap
        - name: nfs-docs
          nfs:
            server: 10.10.10.146
            path: /mnt/bigdata/kubernetes/mkdocs
            readOnly: true
