deployments/workloads/mkdocs/mkdocs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs-service
spec:
  selector:
    app: mkdocs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
